--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,28 @@
+server.port=7777
 
+#mysql
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/apnahomeloan
+spring.datasource.username=root
+spring.datasource.password=root
+
+#hibernate
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jackson.serialization.fail-on-empty-beans=false
+
+#Documents
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.file-size-threshold=10KB
+spring.servlet.multipart.max-file-size=200MB
+spring.servlet.multipart.max-request-size=400MB
+
+#Mail 
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=vrushpkumbhar@gmail.com
+spring.mail.password=gxerddlbrctdeirt
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.trust=true
+spring.mail.properties.mail.smtp.starttls.enable=true
