--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,7 @@
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
 			<scope>runtime</scope>
+			<version>5.1.6</version>
 		</dependency>
 		<dependency>
 			<groupId>org.projectlombok</groupId>
