--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
+server.port=9898
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/validation_task
+spring.datasource.username=root
+spring.datasource.password=root
+
+spring.jpa.show-sql = true
+
+spring.jpa.hibernate.ddl-auto = update
+spring.jpa.properties.hibernate.dialect =org.hibernate.dialect.MySQL5Dialect
+
 
